<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/gear_manager_device_list_bg" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/topView" android:layout_width="fill_parent" android:layout_height="@dimen/promotion_top_image_height" android:src="@drawable/select_divice_bg_default" android:scaleType="fitXY" android:layout_alignParentTop="true" />
    <ImageView android:layout_width="103.0dip" android:layout_height="20.0dip" android:layout_marginTop="33.0dip" android:src="@drawable/gear_welcom_logo" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:layout_marginStart="18.0dip" android:layout_marginEnd="18.0dip" />
    <FrameLayout android:id="@id/buttonLayout" android:layout_width="fill_parent" android:layout_height="92.0dip" android:layout_alignParentBottom="true">
        <LinearLayout android:gravity="center" android:layout_gravity="center_horizontal" android:orientation="horizontal" android:id="@id/search_again" android:background="@drawable/button_background_show_shape_grey" android:layout_width="wrap_content" android:layout_height="40.0dip" android:layout_marginTop="22.0dip" android:layout_marginBottom="30.0dip" android:minWidth="205.0dip" android:paddingStart="20.0dip" android:paddingEnd="20.0dip" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip">
            <com.samsung.android.app.twatchmanager.uiitems.ProgressCircle android:id="@id/progress_circle" android:padding="4.0dip" android:visibility="gone" android:layout_width="32.0dip" android:layout_height="32.0dip" />
            <TextView android:textSize="@dimen/large_text_size" android:textStyle="bold" android:textColor="@color/normal_text_color" android:id="@id/search_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/search_again" android:maxLines="1" android:textAllCaps="true" android:fontFamily="sans-serif-condensed" />
        </LinearLayout>
    </FrameLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/no_device_found_container" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="486.0dip" android:layout_above="@id/buttonLayout" android:layout_below="@id/topView" android:layout_centerHorizontal="true">
        <TextView android:textSize="@dimen/extra_large_text_size" android:textColor="#ff333333" android:gravity="center" android:id="@id/no_device_found_title" android:layout_width="fill_parent" android:layout_height="84.0dip" android:text="@string/no_gear_description" android:fontFamily="sans-serif-condensed-light" />
        <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <com.samsung.android.app.twatchmanager.uiitems.TextViewRegular android:textSize="@dimen/large_text_size" android:textColor="@color/normal_text_color_black_opacity_85" android:gravity="center_horizontal" android:id="@id/no_device_found_description" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="48.0dip" android:layout_marginRight="48.0dip" android:text="@string/no_gear_body" android:fontFamily="sans-serif" />
                <com.samsung.android.app.twatchmanager.uiitems.TextViewRegular android:textSize="@dimen/large_text_size" android:textColor="@color/normal_text_color_black_opacity_85" android:gravity="center_horizontal" android:id="@id/no_device_found_description_warning" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="48.0dip" android:layout_marginRight="48.0dip" android:fontFamily="sans-serif" />
                <com.samsung.android.app.twatchmanager.uiitems.TextViewRegular android:textSize="@dimen/large_text_size" android:textColor="@color/setup_progress_tint_opacity_85" android:gravity="center_horizontal" android:id="@id/moreHelp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="48.0dip" android:layout_marginRight="48.0dip" android:text="@string/welcome_to_samsung_gear_promotion_contact_us" android:fontFamily="sans-serif" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/device_found_container" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_above="@id/buttonLayout" android:layout_below="@id/topView">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/textContainer" android:paddingBottom="33.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginRight="24.0dip">
            <TextView android:textSize="@dimen/extra_large_text_size" android:textColor="#ff333333" android:ellipsize="marquee" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="19.0dip" android:text="@string/which_gear" android:fontFamily="sans-serif-condensed-light" android:textAlignment="center" />
            <TextView android:textSize="@dimen/normal_text_size" android:textColor="@color/normal_text_color_black_opacity_85" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/select_gear_to_connect" android:fontFamily="sans-serif" android:textAlignment="center" />
        </LinearLayout>
        <RelativeLayout android:id="@id/device_layout_container" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/select_gear_to_connect_warning">
                <ListView android:layout_gravity="center_horizontal" android:id="@id/available_devices" android:layout_width="fill_parent" android:layout_height="wrap_content" android:divider="@drawable/list_divider" android:dividerHeight="6.0dip" />
            </FrameLayout>
            <com.samsung.android.app.twatchmanager.uiitems.TextViewRegular android:textSize="@dimen/normal_text_size" android:textColor="@color/normal_text_color_black_opacity_85" android:gravity="center_horizontal" android:id="@id/select_gear_to_connect_warning" android:paddingTop="28.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:fontFamily="sans-serif" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>