<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="106.0dip">
        <TextView android:textSize="@dimen/extra_large_text_size" android:textColor="#ffcccccc" android:gravity="center" android:id="@id/messageText" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="19.0dip" android:text="@string/setup_message_download" android:fontFamily="sans-serif-condensed-light" />
        <TextView android:textSize="@dimen/normal_text_size" android:textColor="@color/normal_text_color_white_opacity_85" android:gravity="center" android:id="@id/statusText" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginTop="12.0dip" android:layout_marginRight="24.0dip" android:text="@string/setup_message_almost_there" android:layout_below="@id/messageText" android:alpha="0.0" android:fontFamily="sans-serif" />
    </RelativeLayout>
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <FrameLayout android:layout_gravity="center" android:id="@id/fragment_container" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <ViewSwitcher android:layout_gravity="center" android:id="@id/download_install_switcher" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:textSize="33.0sp" android:textColor="#fffafafa" android:gravity="center" android:id="@id/setupPercentage" android:background="@drawable/text_shape" android:layout_width="135.0dip" android:layout_height="wrap_content" android:fontFamily="sans-serif-condensed-light" />
                </LinearLayout>
                <View android:layout_width="0.0dip" android:layout_height="0.0dip" />
            </ViewSwitcher>
        </FrameLayout>
    </RelativeLayout>
    <LinearLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginBottom="30.0dip">
        <Button android:textSize="@dimen/large_text_size" android:textStyle="bold" android:textColor="@color/normal_text_color_white" android:id="@id/cancel_btn" android:background="@drawable/button_background_show_shape_dark" android:layout_width="205.0dip" android:layout_height="40.0dip" android:text="@string/cancel" android:textAllCaps="true" android:fontFamily="sans-serif-condensed" />
    </LinearLayout>
</LinearLayout>